[gd_scene load_steps=2 format=3 uid="uid://bwf4aody3dl04"]

[ext_resource type="Script" path="res://game/scripts/ui/SimplePrologueUI.gd" id="1"]

[node name="SimplePrologueUI" type="CanvasLayer"]
layer = 200
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.02, 0.05, 0.15, 1)

[node name="TextContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 100.0
offset_right = -100.0
offset_bottom = -100.0

[node name="TitleLabel" type="Label" parent="TextContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 48
theme_override_colors/font_color = Color(0.8, 0.9, 1.0, 1)
text = "雾雨之都·拉莱耶"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="TextContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)

[node name="StoryText" type="Label" parent="TextContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
text = "雨水不断滴落在这座废墟般的城市中。\n\n时雨时光站在破败的街道上，雨水混合着血水，在脚下形成暗红色的水洼。"
autowrap_mode = 2
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="TextContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="ContinuePrompt" type="Label" parent="TextContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.7, 0.8, 1.0, 1)
text = "按任意键继续..."
horizontal_alignment = 1
